# latex-service

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
latex_service/: latex_service.py
test_files/: temp.tex
tests/: test_latex_service.py
